--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,16 @@ exclude = '''
 )
 '''
 
+[tool.isort]
+combine_as_imports = true
+default_section = "THIRDPARTY"
+include_trailing_comma = true
+known_first_party = "sparklehub"
+line_length = 120
+multi_line_output = 3
+not_skip = "__init__.py"
+skip_glob = ".git,.venv"
+
 [tool.poetry]
 name = "sparklehub"
 version = "0.1.0"
@@ -46,7 +56,7 @@ certifi = ">=2020.4.5"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
-isort = "^4.3.21"
+isort = {extras = ["pyproject"], version = "^4.3.21"}
 flake8 = "^3.7.9"
 ipython = "^7.13.0"
 pre-commit = "^2.1"
