--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,25 @@
 repos:
-  - repo: https://github.com/ambv/black
-    rev: 19.10b0
+  - repo: local
     hooks:
     - id: black
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+      name: black
+      entry: poetry run black .
+      language: system
+      pass_filenames: false
+  - repo: local
     hooks:
     - id: isort
+      name: isort
+      entry: poetry run isort -y
+      language: system
+      pass_filenames: false
   - repo: local
     hooks:
     - id: flake8
       name: flake8
-      entry: poetry run flake8
+      entry: poetry run flake8 .
       language: system
-      types: [python]
+      pass_filenames: false
   - repo: local
     hooks:
     - id: poetry
