--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,4 @@ ignore = E231,E501
 max-line-length = 120
 max-complexity = 20
 select = B,C,E,F,W,T4,B9
-exclude = .git,.venv,openapi_client
+exclude = .git,.venv,sparklehub/openapi_client
